# src/server/Model/Service/Stream/StreamTypeInterface.ts
@@ -1,5 +1,4 @@
 /**
  * Stream 種類定義
  */
-export type StreamType = 'MpegTsLive' | 'RecordedHLS' | 'HLSLive' | 'WebMLive' | 'MP4Live' | 'MpegTsRecordedStreaming' | 'MultiTypeRecordedStreaming';
-
+export type StreamType = 'MpegTsLive' | 'RecordedHLS' | 'HLSLive' | 'WebMLive' | 'MP4Live' | 'RTMPLive' | 'MpegTsRecordedStreaming' | 'MultiTypeRecordedStreaming';
